--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,14 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+#root{
+  width: 100%;
+  height: 100%;
+}
+.container{
+  width: 100%;
+  height: 100%;
+  .main{
+    height: 100%;
+  }
+}
