--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,11 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.center-text{
+  height: calc(62vh);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
