--- a/src/index.scss
+++ b/src/index.scss
@@ -19,3 +19,9 @@ body {
   justify-content: center;
   font-size: 20px;
 }
+
+.inline-page{
+  margin: 15px 0;
+  background: #ffffff;
+  min-height: 660px;
+}
