--- a/src/styles/@mixin.less
+++ b/src/styles/@mixin.less
@@ -1,17 +1,16 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.Model {
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: rgb(204, 204, 204);
+#root {
   height: 100%;
-  width: 100%;
+}
+
+section {
+  height: 100%;
 }
