style(app): loading
before app start loading

--- a/src/index.less
+++ b/src/index.less
@@ -8,3 +8,33 @@
   height: 100%;
   width: 100%;
 }
+
+.m-loading {
+  animation: rotate 2s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.m-loading circle {
+  animation: dash 1.5s ease-in-out infinite;
+}
+
+@keyframes dash {
+  0% {
+    stroke-dasharray: 1, 150;
+    stroke-dashoffset: 0;
+  }
+  50% {
+    stroke-dasharray: 90, 150;
+    stroke-dashoffset: -35;
+  }
+  100% {
+    stroke-dasharray: 90, 150;
+    stroke-dashoffset: -124;
+  }
+}
