--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -14,3 +14,11 @@ body {
 section {
   height: 100%;
 }
+
+.center {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  vertical-align: middle;
+}
